Use normal font weight on headers on Windows.

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -89,7 +89,7 @@
 
             <Style x:Key="ListHeaderTextStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="{StaticResource FontSizeHeader}" />
-                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="FontAttributes" Value="{OnPlatform Default=None, Android=Bold}" />
                 <Setter Property="MaxLines" Value="1" />
             </Style>
 
