Tweaks size on indicator in synchronizing control.

--- a/Source/Pekspro.RadioStorm.MAUI/Views/SynchronizeControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/SynchronizeControl.xaml
@@ -23,8 +23,8 @@
           >
         <ActivityIndicator IsRunning="True" 
                            Grid.Column="0" 
-                           HeightRequest="8" 
-                           WidthRequest="8" 
+                           HeightRequest="{OnPlatform Default=8, Android=12}" 
+                           WidthRequest="{OnPlatform Default=8, Android=12}" 
                            Margin="0,0,8,0"
                            IsVisible="{Binding IsSynchronizing}"
                            />
