--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramControl.xaml
@@ -46,14 +46,14 @@
 
         <Image WidthRequest="{StaticResource HeaderFavoriteStarSize}"
                HeightRequest="{StaticResource HeaderFavoriteStarSize}"
-               Margin="0,0,4,0" 
+               Margin="{OnPlatform WinUI='0,0,4,8', Default='0,0,4,10'}" 
                IsVisible="{Binding IsFavorite, Mode=OneWay}"
                >
             <Image.Source>
                 <FontImageSource
-                            FontFamily="FontAwesome"
-                            Glyph="{x:Static style:IconFont.Star}"
-                            Size="{StaticResource HeaderFavoriteStarSize}"/>
+                    FontFamily="{StaticResource DefaultIconFont}"
+                    Glyph="{OnPlatform WinUI={x:Static style:SegoeIconFont.FavoriteStarFill}, Default={x:Static style:IconFont.Star}}"
+                    Size="{StaticResource HeaderFavoriteStarSize}"/>
             </Image.Source>
         </Image>
 
