--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -19,12 +19,13 @@
             <Color x:Key="PrimaryColor">White</Color>
             <Color x:Key="SecondaryColor">Black</Color>
             <Color x:Key="InactiveProgramColorDark">Gray</Color>
-            <Color x:Key="InactiveProgramColorLight">#999999</Color>
+            <Color x:Key="InactiveProgramColorLight">#777777</Color>
             <Color x:Key="DebugColor">#bbbbbb</Color>
             <Color x:Key="HyperlinkColor">#0063B1</Color>
             <Color x:Key="PanelBackgroundDark">#1E1E1E</Color>
             <Color x:Key="PanelBackgroundLight">#E1E1E1</Color>
-            <Color x:Key="WarningColor">#FF9900</Color>
+            <Color x:Key="WarningColorDark">#FF9900</Color>
+            <Color x:Key="WarningColorLight">#C05A00</Color>
             <x:Double x:Key="FontSizeHeader">20</x:Double>
             <x:Double x:Key="FontSizeNormal">13</x:Double>
             <x:Double x:Key="FontSizeDetails">12</x:Double>
