--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramDetailsPage.xaml
@@ -179,7 +179,7 @@
                                     <SwipeItem Text="{x:Static r:Strings.General_AddToPlayList}"
                                                IconImageSource="{StaticResource PlayList}"
                                                Command="{Binding AddToPlayListCommand}"
-                                               BackgroundColor="{StaticResource WarningColor}"
+                                               BackgroundColor="{AppThemeBinding Dark={StaticResource WarningColorDark}, Light={StaticResource WarningColorLight}}"
                                     />
                                     <SwipeItem Text="{Binding IsListened, Converter={StaticResource BoolToToggleIsListenedConverter}}"
                                                IconImageSource="{StaticResource ToolBarIconIsNotListened}"
