--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -20,17 +20,12 @@
             <Color x:Key="SecondaryColor">Black</Color>
             <Color x:Key="InactiveProgramColorDark">Gray</Color>
             <Color x:Key="InactiveProgramColorLight">#777777</Color>
-            <Color x:Key="DebugColor">#bbbbbb</Color>
-            <Color x:Key="HyperlinkColor">#0063B1</Color>
+            <Color x:Key="HyperlinkColorDark">#0063B1</Color>
+            <Color x:Key="HyperlinkColorLight">#00508E</Color>
             <Color x:Key="PanelBackgroundDark">#1E1E1E</Color>
             <Color x:Key="PanelBackgroundLight">#E1E1E1</Color>
             <Color x:Key="WarningColorDark">#FF9900</Color>
             <Color x:Key="WarningColorLight">#C05A00</Color>
-            <x:Double x:Key="FontSizeHeader">20</x:Double>
-            <x:Double x:Key="FontSizeNormal">13</x:Double>
-            <x:Double x:Key="FontSizeDetails">12</x:Double>
-            <x:Double x:Key="HeaderFavoriteStarSize">16</x:Double>
-            <x:Double x:Key="ListItemImageSize">64</x:Double>
 
             <Color x:Key="SwipeControlForegroundGeneral">White</Color>
             <Color x:Key="SwipeControlBackgroundGeneral">DarkBlue</Color>
@@ -44,6 +39,12 @@
             <Color x:Key="ToolbarIconColorFadedDark">#777777</Color>
             <Color x:Key="ToolbarIconColorFadedLight">#999999</Color>
 
+            <x:Double x:Key="FontSizeHeader">20</x:Double>
+            <x:Double x:Key="FontSizeNormal">13</x:Double>
+            <x:Double x:Key="FontSizeDetails">12</x:Double>
+            <x:Double x:Key="HeaderFavoriteStarSize">16</x:Double>
+            <x:Double x:Key="ListItemImageSize">64</x:Double>
+            
             <OnPlatform x:Key="NormalPageMargin" x:TypeArguments="Thickness" Default="20">
                 <On Platform="WinUI">8</On>
             </OnPlatform>
@@ -84,7 +85,7 @@
             </Style>
 
             <Style x:Key="ListGroupTextStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource HyperlinkColor}" />
+                <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
                 <Setter Property="FontSize" Value="{StaticResource FontSizeDetails}" />
                 <Setter Property="MaxLines" Value="1" />
             </Style>
@@ -101,11 +102,7 @@
             </Style>
 
             <Style x:Key="HyperlinkStyle" TargetType="Span">
-                <Setter Property="TextColor" Value="{StaticResource HyperlinkColor}" />
-            </Style>
-
-            <Style x:Key="DebugStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="{StaticResource DebugColor}" />
+                <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
             </Style>
 
             <Style x:Key="DetailedTextStyle" TargetType="Label">
@@ -120,7 +117,7 @@
             </Style>
 
             <Style x:Key="HyperlinkButton" TargetType="Button">
-                <Setter Property="TextColor" Value="{StaticResource HyperlinkColor}" />
+                <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
                 <Setter Property="Padding" Value="4,8" />
                 <Setter Property="Margin" Value="-4,0,0,0" />
