--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
@@ -69,7 +69,7 @@
 
     <Grid Grid.Column="1" Grid.Row="1" Style="{StaticResource ListItemContentArea}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="48" />
+            <ColumnDefinition Width="{OnPlatform Default=40, WinUI=36}" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
